kubernetes/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: petclinic-ingress
  namespace: petclinic-prod

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:482352877891:certificate/de13b2a7-5981-402f-9539-660951980508

    alb.ingress.kubernetes.io/ssl-redirect: '443'

spec:
  ingressClassName: alb

  rules:
    - host: petclinic.praty.dev

      http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: api-gateway

                port:
                  number: 8080
